feat: :sparkles: add basic api
